<resources>
    <string name="app_name">Movies</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="poster">Poster</string>
    <string name="all">All</string>
    <string name="rating">Rating: %1$s</string>
    <string name="popularity">Popularity: %1$s</string>
    <string name="description">Description:</string>
    <string name="genres">Genres</string>
    <string name="back_button">Back Button</string>
    <string name="back">Back</string>
    <string name="sort_by_popularity">Sort By Popularity</string>
    <string name="ascending">Ascending</string>
    <string name="descending">Descending</string>
    <string name="movies">Movies</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="light_mode">Light Mode</string>
    <string name="no_data_to_show">No Data To Show</string>
    <string name="mode">Theme Mode</string>
</resources>